[gd_scene load_steps=8 format=3 uid="uid://bwrm0y71vp4ol"]

[ext_resource type="PackedScene" uid="uid://dnkvex8li8a4j" path="res://frameWorkCore/main_UI.tscn" id="1_h2tya"]
[ext_resource type="Script" path="res://frameWorkCore/scene_auto.gd" id="1_u3583"]
[ext_resource type="Texture2D" uid="uid://ck0fpeackkskw" path="res://artResource/UI_gameplay/dialoguebox.png" id="2_4ib0j"]
[ext_resource type="Texture2D" uid="uid://xqy3a8rw8472" path="res://artResource/UI_gameplay/narrationbox.png" id="2_al05t"]
[ext_resource type="Script" path="res://frameWorkCore/dialogue.gd" id="5_ec12k"]
[ext_resource type="FontFile" uid="uid://dcrep5362jnq1" path="res://artResource/UI_gameplay/ALFYSB.otf" id="5_v5flt"]
[ext_resource type="Script" path="res://frameWorkCore/errorlogDontTouch.gd" id="7_pny5b"]

[node name="scene_auto" type="CanvasLayer" groups=["game_play"]]
script = ExtResource("1_u3583")

[node name="background" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="background" type="TextureRect" parent="background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="viedo_background" type="VideoStreamPlayer" parent="background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="left" type="CenterContainer" parent="background"]
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -0.578674
offset_bottom = -0.359985

[node name="character" type="TextureRect" parent="background/left"]
texture_filter = 2
custom_minimum_size = Vector2(600, 1200)
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="right" type="CenterContainer" parent="background"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 1.2
offset_right = 0.639893
offset_bottom = -136.08

[node name="character" type="TextureRect" parent="background/right"]
custom_minimum_size = Vector2(600, 1200)
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="mid" type="CenterContainer" parent="background"]
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.15
anchor_right = 0.701
anchor_bottom = 1.2
offset_right = -0.920044
offset_bottom = 13.3999

[node name="character" type="TextureRect" parent="background/mid"]
custom_minimum_size = Vector2(600, 1200)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="dialogue" type="CanvasLayer" parent="."]

[node name="narration_box" type="TextureRect" parent="dialogue"]
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.95
offset_left = -144.0
offset_right = 144.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_al05t")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="dialogue_box" type="TextureRect" parent="dialogue"]
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.95
offset_left = -144.0
offset_right = 144.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ib0j")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="character" type="Label" parent="dialogue"]
unique_name_in_owner = true
offset_left = 331.0
offset_top = 759.0
offset_right = 692.0
offset_bottom = 821.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_v5flt")
theme_override_font_sizes/font_size = 40
text = "这是一个很长的名字"
autowrap_mode = 1
clip_text = true
metadata/_edit_lock_ = true

[node name="dialogue" type="Label" parent="dialogue" groups=["dialogue"]]
unique_name_in_owner = true
offset_left = 332.0
offset_top = 842.0
offset_right = 1573.0
offset_bottom = 966.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_v5flt")
theme_override_font_sizes/font_size = 40
text = "一二三四五六七八九十十一十二十三十四十五十六十七十八十九二十二十一二十二二十三二十四二十五二十六二十七二十八二十九三十三十一"
autowrap_mode = 1
clip_text = true
script = ExtResource("5_ec12k")
metadata/_edit_lock_ = true

[node name="UI" parent="." instance=ExtResource("1_h2tya")]

[node name="ColorRect" parent="UI/Control" index="0"]
color = Color(0.54902, 0.54902, 0.54902, 0.784314)

[node name="choice" type="CanvasLayer" parent="."]

[node name="choice_box" type="FlowContainer" parent="choice"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.6
offset_top = -46.0
offset_right = 48.0
offset_bottom = 40.0
alignment = 1
vertical = true

[node name="DO NOT TOUCH" type="CanvasLayer" parent="." groups=["errorlog"]]
visible = false
script = ExtResource("7_pny5b")

[node name="Panel" type="ColorRect" parent="DO NOT TOUCH"]
offset_top = 315.0
offset_right = 1922.0
offset_bottom = 759.0
color = Color(1, 1, 0, 1)

[node name="errorlog" type="Label" parent="DO NOT TOUCH/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -2.0
offset_right = 1924.0
offset_bottom = 720.0
theme_override_colors/font_color = Color(0.952941, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_v5flt")
theme_override_font_sizes/font_size = 100
text = "这是一个非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常非常长的报错"
autowrap_mode = 1
clip_text = true

[node name="auto_play_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="speed_up_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CG_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="music" type="Node" parent="."]

[node name="bgm" type="Node" parent="music"]

[node name="bgm" type="AudioStreamPlayer" parent="music/bgm"]

[node name="bgm2" type="AudioStreamPlayer" parent="music/bgm"]

[node name="bgm3" type="AudioStreamPlayer" parent="music/bgm"]

[node name="voice" type="Node" parent="music"]

[node name="voice" type="AudioStreamPlayer" parent="music/voice"]

[node name="voice2" type="AudioStreamPlayer" parent="music/voice"]

[node name="voice3" type="AudioStreamPlayer" parent="music/voice"]

[node name="sound_effect" type="Node" parent="music"]

[node name="soundeffect1" type="AudioStreamPlayer" parent="music/sound_effect"]

[node name="soundeffect2" type="AudioStreamPlayer" parent="music/sound_effect"]

[node name="soundeffect3" type="AudioStreamPlayer" parent="music/sound_effect"]

[node name="soundeffect4" type="AudioStreamPlayer" parent="music/sound_effect"]

[node name="soundeffect5" type="AudioStreamPlayer" parent="music/sound_effect"]

[connection signal="finished" from="background/viedo_background" to="." method="_on_viedo_background_finished"]
[connection signal="pressed" from="UI/Control/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/quicksave" to="." method="_on_quicksave_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/quickload" to="." method="_on_quickload_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/volumn" to="." method="_on_volumn_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/show_tree" to="." method="_on_show_tree_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/review" to="." method="_on_review_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/auto" to="." method="_on_auto_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/forward_speed" to="." method="_on_forward_speed_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/forwardToNextChoice" to="." method="_on_forward_to_next_choice_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/visible" to="." method="_on_visible_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/leave" to="." method="_on_leave_pressed"]
[connection signal="timeout" from="auto_play_timer" to="." method="_on_auto_play_timer_timeout"]
[connection signal="timeout" from="speed_up_timer" to="." method="_on_speed_up_timer_timeout"]

[editable path="UI"]
